2004-07-09  Matti Aarnio  <mea@zmailer.org>

	* proto/cf/aliases.cf:
	    Third try to get Eugene Crosser's DOMAIN_AWARE_GETPWNAM
	    to work correctly..  (I applied the thing by hand, and
	    were sloppy reader :-( )

	* smtpserver/smtpcmds.c, smtpserver/smtpserver.c:
	    When i-router replies a message, do issue its possible
	    ENHANCEDSTATUSCODE value in proper position of the reply
	    (in addition to the "Hi [1.2.3.4]," prefix..)
	    Also added several of those messages, and moved the
	    "boo boo, you are in our blacklists" replies around
	    so that a microsoft user getting only the last reply line
	    from the server will get something usefull.

	* configure.in, smtpserver/Makefile.in, smtpserver/policytest.c,
	  smtpserver/smtpserver.h, smtpserver/smtphook.c:
	    Added begins of embedded perl hooking into smtpserver so that
	    folks can install their own policy stuff, as they want..
	    THIS IS NOT YET USABLE!

	* smtpserver/policytest.c:
	    Moved 'state->authuser' check onwards within  pt_mailfrom().
	    And added hardwired 'verify that mail from domain does exist'
	    into it.

2004-07-08  Matti Aarnio  <mea@zmailer.org>

	* configure.in, smtpserver/cfgread.c, smtpserver/policytest.c,
	  smtpserver/smtpdate.c, smtpserver/policytest.h, 
	  smtpserver/smtpserver.h:
	    SPF_ALT to SPF2 library support migration.

	* smtpserver/cfgread.c:
	    SPF parameter parsing bug fix from Eugene Crosser.

2004-07-07  Matti Aarnio  <mea@zmailer.org>

	* configure.in:
	    Version 2.99.57.pre2

	* configure.in:
	    New:  --with-resolvlib="-L ... -R ... -lxxx"
	    Allow manual definition of linking-time of possibly
	    esoteric resolver library name, and linking rules.

	* include/libsh.h, libsh/interpret.c, router/daemonsub.c:
	    Moved  traphup()  prototype into  libsh.h, and
	    fixed wait() prototype in interpret.c.

2004-07-06  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/subdaemon-rtr.c: